--- a/a6.html
+++ b/a6.html
@@ -35,6 +35,7 @@
         <a href="a5.html" title="A5: Working as a Digital Designer">A5: Working as a Digital Designer</a>
         <a href="a6.html" title="A6: Living with Complexity">A6: Living with Complexity</a>
         <a href="a7.html" title="A7: Reflections on Map, Sketch, and Decide">A7: Reflections on Map, Sketch, and Decide</a>
+        <a href="a8.html" title="A8: Reflections on Journey Mapping">A8: Reflections on Journey Mapping</a>
       </div>
     </div>
   </div>
