--- a/a8.html
+++ b/a8.html
@@ -48,9 +48,26 @@
   
     <article>
         <h2>A8: Reflections on Journey Mapping</h2>
-        <p>Week 4, reflections on group portfolio tasks </p>
+        <p>Week 4, reflections on Journey Mapping task </p>
         </br> 
-         
+         <p>I have learned that Customer Journey Map can be extremely useful tool when designing and especially when designing human-centered. 
+           I have learned that to produce a good viable product you have to design from user perspective. </p>
+        <p>One of the biggest noticeable values in my experience when using Customer Journey Map as a tool has to be ability to design and build with 
+          empathy. Customer Journey Map is a useful way of putting yourself into customers shoes and predict possible falls or mishaps. What would they 
+          be feeling and how could I help myself to understand their behalf? Understanding user needs, emotions and motivations better to fill possible 
+          gaps in your design. It not only benefits from that aspect, but it makes your design also “care” about the user making it more meaningful to the 
+          user in this way.</p>
+        <p>The touchpoints were very helpful in Journey Maps. It makes it easier to divide one interaction into smaller actions and focus on them individually. 
+          With my team we generated journeys very organically, not planning the whole interaction as one but rather going step by step. After certain action 
+          what would the user do next and why? What drives them to take certain actions?</p>
+        <p>I felt like Journey Maps also validate user experiences of their journeys with the project. even though as a creator of imaginary reactions and 
+          interactions it is sometimes hard to stay subjective and not mix your own views and motives with the mapping. I have learned that it is easier to design
+          when you have an example person who you are designing for. It makes it much easier to focus on human-centered designing compared to when you don’t have 
+          an example of possible primary user. I found myself coming up with more detailed and personalized solutions than without example user.
+          Even though, the humans are never as straight forward as our models might make them seem. I believe user actions and motives are much more complicated 
+          than what we can generate but at least we can somewhat closely mimic them. </p>
+        <p>In the future I would create possible primary users’ profiles first and then generate multiple different Journey Maps for each user. 
+          I feel like the more Journey Maps you have the better picture or better medium of possible interactions you would get. </p>
         
     </article>
   </section>
