--- a/a7.html
+++ b/a7.html
@@ -62,6 +62,11 @@
           such as the overall highlight on setting a long-term goal. It was important so we wouldn’t lose the purpose and actual and goal of our mission. 
           I have noticed I haven’t paid enough attention to forming a long-term goal sentence in projects before but rather having a faint idea of what I am 
           aiming for. Having a concrete sentence as a goal is much easier to follow and keep track of. </p>
+         </br>
+          <img src="Lotus.jpg" alt="Lotus Blossom">
+         </br>
+         </br>
+      
         <p>Like I mentioned before, one of the hardest parts was coming up with on a whim. Getting ideas on a paper without any filter is surprisingly hard 
           especially if you need to produce multiple ideas in a very short time. There is a certain block one must overcome and just pushing out ideas no matter
           how ridiculous it might seem at the time. Having no filter is also the best thing during ideation phase. Hardest and best simultaneously. One has to 
