--- a/a7.html
+++ b/a7.html
@@ -79,7 +79,10 @@
         <p>The second hardest part of this phase was narrowing down all the generated information and possible solutions to just one option to continue to work 
           further. I think that is the reason why we decided to work on a much larger concept than just one certain feature, aspect, or problem. I feel like our 
           solutions tackles more ground which could be both a blessing and a curse. </p>
-        
+         </br>
+         <img src="sticky.jpg" alt="Sticky Decisions">
+         </br>
+         </br>
     </article>
   </section>
 </div>
