--- a/a5.html
+++ b/a5.html
@@ -36,6 +36,7 @@
         <a href="a6.html" title="A6: Living with Complexity">A6: Living with Complexity</a>
         <a href="a7.html" title="A7: Reflections on Map, Sketch, and Decide">A7: Reflections on Map, Sketch, and Decide</a>
         <a href="a8.html" title="A8: Reflections on Journey Mapping">A8: Reflections on Journey Mapping</a>
+        <a href="a9.html" title="A9: UI Design Principles">A9: UI Design Principles</a>
       </div>
     </div>
   </div>
