--- a/a9.html
+++ b/a9.html
@@ -49,10 +49,84 @@
   
     <article>
         <h2>A9: UI Design Principles</h2>
-        <p>Week 4, reflections on Design Principles </p>
+        <p>Week 4, create our own check list wfor evaluating the work our team has done during Digital Service Design course.</p>
         </br> 
-         
-        
+        <p>1. 1.	Visual message</p>
+        <p>The visual overall look with right colour, typography and layout sends a message just like Simpson is referring to in his video. 
+          Your overall visual look of the digital service is going to define your business brand and imago. For example, as a medical company 
+          you would want to have something clear, serene and professional looking fonts on your page to raise trust among users, instead of comical, 
+          swirly fonts that would give the page much more humorous essence, which would not support business. Same could be applied for images and 
+          other layout features within your digital service.</p>
+        <p>Simpson, M. November 2014. Principles of Graphic Design. Online video. UCLA Luskin School of Public Affairs. 
+          URL: <a href="https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s">https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s</a>.Accessed: 12 March 2024.</p>
+        </br>
+        <p>2. Error preventing</p>
+        <p>Aiming to prevent errors from occurring before there is even a change for error to occur. Nielsen said that good error messages are important, 
+          but the best designs carefully prevent problems from occurring in the first place (Nielsen, January 2024). Digital service needs to be designed 
+          in such way that eliminates error-prone conditions or checks for them and present users with a confirmation option before they commit to the 
+          action (Nielsen, January 2024). A service is much more user-friendly and convenient to use if there is minimum to no errors at all. Continuous 
+          error occurrence can scare users away since the service is not fluent or trustworthy. 
+          Occam’s Razor & Pareto Principle support this standard too by stating to select a design with lowest possible complication (Michael Devers 2018). 
+          This would also support the importance of error prevention principle within digital service design.</p>
+        <p>Michael Devers 2018. Occam & Pareto. URL: <a href="https://michaeldevers.com/occam-pareto/">https://michaeldevers.com/occam-pareto/</a>. Accessed: 10 March 2024.</p>
+        <p>Nielsen, J. January 2024. 10 Usability Heuristics for User Interface Design. Nielsen Norman Group. URL: <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">https://www.nngroup.com/articles/ten-usability-heuristics/</a>. 
+          Accessed: 10 March 2024. </p>
+        </br>
+        <p>3. Conventions</p>
+        <p>Page should follow a good number of conventions as Pásztor stated in his article. Conventions are things in digital design that we are used to that 
+          are conventional such as having link blue and arrows allowing you to navigate back, forward, up or down depending on the position of the arrow. 
+          A missing convention in where it should be can causes discomfort and misunderstanding from users’ point of view. Enough misunderstandings and user 
+          will drop the service. Learnt habits affect the user-friendliness of the digital service or solution hence why it is important to follow the common 
+          conventions and see t hat your digital solution supports them. Nielsen states users should not have to wonder whether different words, situations, 
+          or actions mean the same thing. Follow platform and industry conventions (Nielsen January 2024).</p>
+        <p>Nielsen, J. January 2024. 10 Usability Heuristics for User Interface Design. Nielsen Norman Group. URL: <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">https://www.nngroup.com/articles/ten-usability-heuristics/</a>. 
+          Accessed: 10 March 2024. </p>
+        <p>Pásztor, D. October 2019. How to Start Screen Design and 8 Principles You Should Consider. U Uxstudio. URL: <a href="https://uxstudioteam.com/ux-blog/screen-design/">https://uxstudioteam.com/ux-blog/screen-design/</a>.
+        Accessed: 10 March 2024.</p>
+        </br>
+        <p> 4. Functionality</p>
+        <p>Functionality is big part of any solution. No matter how beautiful the solution is, if it doesn’t work properly or as intended, it is as good as nothing. 
+          Can users press the buttons they are intended to press, is the button too small to be pressed with a finger or does the button do the function it’s supposed 
+          to perform? All this needs to be taken into consideration when designing. Can users for example reach a certain button with their fingers if they are using 
+          service through mobile application. If the functionality doesn’t execute or function poorly, it will affect user satisfaction. For solution to perform it 
+          needs to be also functional.</p>
+        <p>Pásztor, D. October 2019. How to Start Screen Design and 8 Principles You Should Consider. U Uxstudio. URL: <a href="https://uxstudioteam.com/ux-blog/screen-design/">https://uxstudioteam.com/ux-blog/screen-design/</a>.
+        Accessed: 10 March 2024.</p>
+        </br>
+        <p>5. Logic of your solution</p>
+        <p>Your digital service needs to have logic to it. For example, 3 three guiding questions of screen design: when we arrive at a new screen, we are looking 
+          for the answer to three questions: Where am I? What can I do here? How can I move forward (Pásztor October 2019)? User should know without having to think 
+          any further where they are or on whose service page, they are on to navigate through the solution fluently. Valtakari was talking in his presentation about 
+          proximity that supports logic in solutions. With proximity Valtakari means that things that are connected to each other should physically locate in the 
+          closeness of each other. This helps navigation and improves user-friendliness greatly. Logic of digital service can also include consistency and standards 
+          to it mentioned earlier in principle list number 3.</p>
+         <p>Pásztor, D. October 2019. How to Start Screen Design and 8 Principles You Should Consider. U Uxstudio. URL: <a href="https://uxstudioteam.com/ux-blog/screen-design/">https://uxstudioteam.com/ux-blog/screen-design/</a>.
+          Accessed: 10 March 2024.</p>
+         <p>Valtakari, K. 2024. Design Principles with examples. Haaga-Helia. Helsinki. URL: <a href="https://hhmoodle.haaga-helia.fi/pluginfile.php/3567698/mod_resource/content/6/DesignPrinciples_CRAP_examples.pdf">https://hhmoodle.haaga-helia.fi/pluginfile.php/3567698/mod_resource/content/6/DesignPrinciples_CRAP_examples.pdf</a>. 
+         Accessed: 13 March 2024.</p>
+        </br>
+        <p>6. Help and Documentation </p>
+        <p>It’s best if the system doesn’t need any additional explanation. However, it may be necessary to provide documentation to help users understand how to 
+          complete their tasks (Nielsen January 2024). System must be self-explanatory enough for user to navigate through it without further introduction. 
+          If certain service requires eexplanation, you might want to reconsider weather it’s clear and functional enough or is there a room for betterment. 
+          If there is not user help regarding usage of the service, when facing an error or hardship user can easily abandon service.</p>
+         <p>Nielsen, J. January 2024. 10 Usability Heuristics for User Interface Design. Nielsen Norman Group. URL: <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">https://www.nngroup.com/articles/ten-usability-heuristics/</a>. 
+          Accessed: 10 March 2024. </p>
+        </br>
+        <p>7. Target audience reach</p>
+        <p>Does the service you have designed reach the desired target audience? Digital services might not translate universally to all user groups to it is crucial 
+          it translates to your primary user group. Services for elderly people are designed differently compared to services designed for youth or even children. 
+          The difference is big, and a mark can be missed if the design does not adhere to these specifications. </p>
+         <p>Simpson, M. November 2014. Principles of Graphic Design. Online video. UCLA Luskin School of Public Affairs. 
+          URL: <a href="https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s">https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s</a>.Accessed: 12 March 2024.</p>
+        </br>
+        <p>8. Simplicity </p>
+        <p>Simplicity of design highlights the need to remove anything that is unnecessary in digital service design. Anything that might crowd the solution or 
+          distract the user from their task within the app. These things can unnecessarily complicate the user experience within the solution. Only the necessary 
+          features or design choices should be applied to final design product.</p>
+         <p>Simpson, M. November 2014. Principles of Graphic Design. Online video. UCLA Luskin School of Public Affairs. 
+          URL: <a href="https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s">https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s</a>.Accessed: 12 March 2024.</p>
+        </br>
     </article>
   </section>
 </div>
