--- a/a4.html
+++ b/a4.html
@@ -37,6 +37,7 @@
         <a href="a7.html" title="A7: Reflections on Map, Sketch, and Decide">A7: Reflections on Map, Sketch, and Decide</a>
         <a href="a8.html" title="A8: Reflections on Journey Mapping">A8: Reflections on Journey Mapping</a>
         <a href="a9.html" title="A9: UI Design Principles">A9: UI Design Principles</a>
+        <a href="a10.html" title="A10: Reflections from the Course">A10: Reflections from the Course</a>
       </div>
     </div>
   </div>
