--- a/a9.html
+++ b/a9.html
@@ -52,7 +52,7 @@
         <h2>A9: UI Design Principles</h2>
         <p>Week 4, create our own check list wfor evaluating the work our team has done during Digital Service Design course.</p>
         </br> 
-        <p>1.	Visual message</p>
+        <h1>1.	Visual message</h1>
         <p>The visual overall look with right colour, typography and layout sends a message just like Simpson is referring to in his video. 
           Your overall visual look of the digital service is going to define your business brand and imago. For example, as a medical company 
           you would want to have something clear, serene and professional looking fonts on your page to raise trust among users, instead of comical, 
