--- a/a10.html
+++ b/a10.html
@@ -50,10 +50,51 @@
   
     <article>
         <h2>A10: Reflections from the Course</h2>
-        <p>Week 7, reflections on the whole course </p>
+        <p>Week 7, reflections on the most important learning goals during this course and how they could benefit me in the future </p>
         </br> 
-        
-        
+        <p>1.	Whole process of designing a product</p>
+        <p>This has been the most valuable aspect as whole from this course, to learn what a digital service design process looks like 
+          and what it can hold in it. This will benefit my future career knowing already something that goes into a design sprint, how 
+          it is conducted, what is important, what methods are mot commonly used. Having hands on experience in something you wish to do 
+          in your career is never a bad thing. Having something to add to your portfolio for further job or internship search is one of the 
+          many benefits of this course. Maybe the importance of portfolio in the field could be added to this one too.</p>
+        </br>
+        <p>2.	Importance of documentation</p>
+        <p>One of my key learnings is the importance of documentation during design process, so everything can be revisited or re-evaluated. 
+          It is easier to combine facts and progress further with having all the previous steps documented.</p>
+        </br>
+        <p>3.	Tools for design</p>
+        <p>One of my learning goals was to learn and know more of tool used in design processes in digital service and during this course we got 
+          to use multiple different ones. Tools that I learnt to use fluently are Figma, Canva, Penpot, Github and Wix. I had previous experience 
+          from Wix, Canva and GitHub but other tools where unknown to me. Especially Penpot will prove to be highly beneficial for my future career 
+          options since innovating and prototyping is what I aspire to work with in the future. </p>
+        </br>
+        <p>4.	Goal setting </p>
+        <p>To hit a certain goal in a project you really have to set a hard goal that you can build everything else around. During design process 
+          having a long-term goal helped to stay focused on the desired end outcome and helped avoiding traying from the original plan.</p>
+        </br>
+        <p>5.	Understanding problems</p>
+        <p>I gained new outlook on how to view problems during the course. Instead of solving them, trying to understand the root and nature of the problem. 
+          Because if one only tries to obsessively solve a problem, they might miss crucial points or information and end up not actually even solving the 
+          problem but offering users something they didn’t even want in the first place. Taking a lot more viewer kind of approach rather than doer. 
+          At least at first. During the course we went through detailed steps on how to understand and handle the problem which helped me greatly to gain 
+          different point of view for future work life projects.</p>
+        </br>
+        <p>6.	Versatility and complexity of human centered design</p>
+        <p>The versatility and complexity of making a user-friendly service. During this course in addition to methods we were taught with extra material 
+          on Moodle about design principles. This is also something I really was looking forward from this course and had originally in my learning goals. 
+          Understanding field principles for future work life purpose to gain knowledge of what it is to be a UXDeigner even before you start at said job.</p>
+        </br>
+        <p>7.	Experience from UXDesigners</p>
+        <p>One of my goals was to have hands on knowledge of what it is to be a UX Designer. During this course we got a lot of hands-on experience from 
+          well know designers. A lot of this information will be useful in future career options, which ever it will be. Having even small insight to field 
+          is always highly beneficial to understand the nature of the job and it’s industry requirements. </p>
+        </br>
+        <p>I am more than happy how our team performed during this design task and for the first time in a long time I didn’t have to worry about end 
+          deliverables not making it in time. My role in the project ended up mostly being coordinator and lead, who makes sure everyone is on the same 
+          page, has same information and knows what tasks they need to perform. Even though our team was very self driven to begin with, a hint of guidance
+          didn’t hurt anyone. The workload was contributed evenly, and everyone contributed to many tasks, not just staying in their own task area. Versatility
+          was amazing in our team, but everyone did also have their strong suits.</p>
     </article>
   </section>
 </div>
