--- a/aboutMe.html
+++ b/aboutMe.html
@@ -32,6 +32,12 @@
         <a href="a2.html" title="A2: W3 CSS Tutorial Reflections">A2: W3 CSS Tutorial Reflections</a>
         <a href="a3.html" title="A3: Building Team Web Portfolio">A3: Building Team Web Portfolio</a>
         <a href="a4.html" title="A4: The Immutable Rules of UX by Jakob Nielsen">A4: The Immutable Rules of UX by Jakob Nielsen</a>
+        <a href="a5.html" title="A5: Working as a Digital Designer">A5: Working as a Digital Designer</a>
+        <a href="a6.html" title="A6: Living with Complexity">A6: Living with Complexity</a>
+        <a href="a7.html" title="A7: Reflections on Map, Sketch, and Decide">A7: Reflections on Map, Sketch, and Decide</a>
+        <a href="a8.html" title="A8: Reflections on Journey Mapping">A8: Reflections on Journey Mapping</a>
+        <a href="a9.html" title="A9: UI Design Principles">A9: UI Design Principles</a>
+        <a href="a10.html" title="A10: Reflections from the Course">A10: Reflections from the Course</a>
       </div>
     </div>
   </div>
