--- a/a9.html
+++ b/a9.html
@@ -61,7 +61,7 @@
         <p>Simpson, M. November 2014. Principles of Graphic Design. Online video. UCLA Luskin School of Public Affairs. 
           <br>URL: <a href="https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s">https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s</a>. Accessed: 12 March 2024.</p>
         </br>
-        <p>2. Error preventing</p>
+        <h1>2. Error preventing</h1>
         <p>Aiming to prevent errors from occurring before there is even a change for error to occur. Nielsen said that good error messages are important, 
           but the best designs carefully prevent problems from occurring in the first place (Nielsen, January 2024). Digital service needs to be designed 
           in such way that eliminates error-prone conditions or checks for them and present users with a confirmation option before they commit to the 
@@ -73,7 +73,7 @@
         <p>Nielsen, J. January 2024. 10 Usability Heuristics for User Interface Design. Nielsen Norman Group. <br>URL: <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">https://www.nngroup.com/articles/ten-usability-heuristics/</a>. 
           Accessed: 10 March 2024. </p>
         </br>
-        <p>3. Conventions</p>
+        <h1>3. Conventions</h1>
         <p>Page should follow a good number of conventions as Pásztor stated in his article. Conventions are things in digital design that we are used to that 
           are conventional such as having link blue and arrows allowing you to navigate back, forward, up or down depending on the position of the arrow. 
           A missing convention in where it should be can causes discomfort and misunderstanding from users’ point of view. Enough misunderstandings and user 
@@ -85,7 +85,7 @@
         <p>Pásztor, D. October 2019. How to Start Screen Design and 8 Principles You Should Consider. Uxstudio. <br>URL: <a href="https://uxstudioteam.com/ux-blog/screen-design/">https://uxstudioteam.com/ux-blog/screen-design/</a>.
         Accessed: 10 March 2024.</p>
         </br>
-        <p> 4. Functionality</p>
+        <h1> 4. Functionality</h1>
         <p>Functionality is big part of any solution. No matter how beautiful the solution is, if it doesn’t work properly or as intended, it is as good as nothing. 
           Can users press the buttons they are intended to press, is the button too small to be pressed with a finger or does the button do the function it’s supposed 
           to perform? All this needs to be taken into consideration when designing. Can users for example reach a certain button with their fingers if they are using 
@@ -94,7 +94,7 @@
         <p>Pásztor, D. October 2019. How to Start Screen Design and 8 Principles You Should Consider. Uxstudio. <br>URL: <a href="https://uxstudioteam.com/ux-blog/screen-design/">https://uxstudioteam.com/ux-blog/screen-design/</a>.
         Accessed: 10 March 2024.</p>
         </br>
-        <p>5. Logic of your solution</p>
+        <h1>5. Logic of your solution</h1>
         <p>Your digital service needs to have logic to it. For example, 3 three guiding questions of screen design: when we arrive at a new screen, we are looking 
           for the answer to three questions: Where am I? What can I do here? How can I move forward (Pásztor October 2019)? User should know without having to think 
           any further where they are or on whose service page, they are on to navigate through the solution fluently. Valtakari was talking in his presentation about 
@@ -106,7 +106,7 @@
          <p>Valtakari, K. 2024. Design Principles with examples. Haaga-Helia. Helsinki. <br>URL: <a href="https://hhmoodle.haaga-helia.fi/pluginfile.php/3567698/mod_resource/content/6/DesignPrinciples_CRAP_examples.pdf">https://hhmoodle.haaga-helia.fi/pluginfile.php/3567698/mod_resource/content/6/DesignPrinciples_CRAP_examples.pdf</a>. 
          Accessed: 13 March 2024.</p>
         </br>
-        <p>6. Help and Documentation </p>
+        <h1>6. Help and Documentation </h1>
         <p>It’s best if the system doesn’t need any additional explanation. However, it may be necessary to provide documentation to help users understand how to 
           complete their tasks (Nielsen January 2024). System must be self-explanatory enough for user to navigate through it without further introduction. 
           If certain service requires eexplanation, you might want to reconsider weather it’s clear and functional enough or is there a room for betterment. 
@@ -114,14 +114,14 @@
          <p>Nielsen, J. January 2024. 10 Usability Heuristics for User Interface Design. Nielsen Norman Group. <br>URL: <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">https://www.nngroup.com/articles/ten-usability-heuristics/</a>. 
           Accessed: 10 March 2024. </p>
         </br>
-        <p>7. Target audience reach</p>
+        <h1>7. Target audience reach</h1>
         <p>Does the service you have designed reach the desired target audience? Digital services might not translate universally to all user groups to it is crucial 
           it translates to your primary user group. Services for elderly people are designed differently compared to services designed for youth or even children. 
           The difference is big, and a mark can be missed if the design does not adhere to these specifications. </p>
          <p>Simpson, M. November 2014. Principles of Graphic Design. Online video. UCLA Luskin School of Public Affairs. 
           <br>URL: <a href="https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s">https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s</a>.Accessed: 12 March 2024.</p>
         </br>
-        <p>8. Simplicity </p>
+        <h1>8. Simplicity </h1>
         <p>Simplicity of design highlights the need to remove anything that is unnecessary in digital service design. Anything that might crowd the solution or 
           distract the user from their task within the app. These things can unnecessarily complicate the user experience within the solution. Only the necessary 
           features or design choices should be applied to final design product.</p>
