--- a/a9.html
+++ b/a9.html
@@ -58,8 +58,8 @@
           you would want to have something clear, serene and professional looking fonts on your page to raise trust among users, instead of comical, 
           swirly fonts that would give the page much more humorous essence, which would not support business. Same could be applied for images and 
           other layout features within your digital service.</p>
-        <p>Simpson, M. November 2014. Principles of Graphic Design. Online video. UCLA Luskin School of Public Affairs. 
-          <br>URL: <a href="https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s">https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s</a>. Accessed: 12 March 2024.</p>
+        <p><i></i></i>Simpson, M. November 2014. Principles of Graphic Design. Online video. UCLA Luskin School of Public Affairs. 
+          <br>URL: <a href="https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s">https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s</a>. Accessed: 12 March 2024.</i></p>
         </br>
         <h1>2. Error preventing</h1>
         <p>Aiming to prevent errors from occurring before there is even a change for error to occur. Nielsen said that good error messages are important, 
@@ -69,9 +69,9 @@
           error occurrence can scare users away since the service is not fluent or trustworthy. 
           Occam’s Razor & Pareto Principle support this standard too by stating to select a design with lowest possible complication (Michael Devers 2018). 
           This would also support the importance of error prevention principle within digital service design.</p>
-        <p>Michael Devers 2018. Occam & Pareto. <br>URL: <a href="https://michaeldevers.com/occam-pareto/">https://michaeldevers.com/occam-pareto/</a>. Accessed: 10 March 2024.</p>
+        <p><i></i>Michael Devers 2018. Occam & Pareto. <br>URL: <a href="https://michaeldevers.com/occam-pareto/">https://michaeldevers.com/occam-pareto/</a>. Accessed: 10 March 2024.</p>
         <p>Nielsen, J. January 2024. 10 Usability Heuristics for User Interface Design. Nielsen Norman Group. <br>URL: <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">https://www.nngroup.com/articles/ten-usability-heuristics/</a>. 
-          Accessed: 10 March 2024. </p>
+          Accessed: 10 March 2024. </i></p>
         </br>
         <h1>3. Conventions</h1>
         <p>Page should follow a good number of conventions as Pásztor stated in his article. Conventions are things in digital design that we are used to that 
@@ -80,10 +80,10 @@
           will drop the service. Learnt habits affect the user-friendliness of the digital service or solution hence why it is important to follow the common 
           conventions and see t hat your digital solution supports them. Nielsen states users should not have to wonder whether different words, situations, 
           or actions mean the same thing. Follow platform and industry conventions (Nielsen January 2024).</p>
-        <p>Nielsen, J. January 2024. 10 Usability Heuristics for User Interface Design. Nielsen Norman Group. <br>URL: <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">https://www.nngroup.com/articles/ten-usability-heuristics/</a>. 
-          Accessed: 10 March 2024. </p>
-        <p>Pásztor, D. October 2019. How to Start Screen Design and 8 Principles You Should Consider. Uxstudio. <br>URL: <a href="https://uxstudioteam.com/ux-blog/screen-design/">https://uxstudioteam.com/ux-blog/screen-design/</a>.
-        Accessed: 10 March 2024.</p>
+        <p><i></i>Nielsen, J. January 2024. 10 Usability Heuristics for User Interface Design. Nielsen Norman Group. <br>URL: <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">https://www.nngroup.com/articles/ten-usability-heuristics/</a>. 
+          Accessed: 10 March 2024. </i></p>
+        <p><i></i>Pásztor, D. October 2019. How to Start Screen Design and 8 Principles You Should Consider. Uxstudio. <br>URL: <a href="https://uxstudioteam.com/ux-blog/screen-design/">https://uxstudioteam.com/ux-blog/screen-design/</a>.
+        Accessed: 10 March 2024.</i></p>
         </br>
         <h1> 4. Functionality</h1>
         <p>Functionality is big part of any solution. No matter how beautiful the solution is, if it doesn’t work properly or as intended, it is as good as nothing. 
@@ -91,8 +91,8 @@
           to perform? All this needs to be taken into consideration when designing. Can users for example reach a certain button with their fingers if they are using 
           service through mobile application. If the functionality doesn’t execute or function poorly, it will affect user satisfaction. For solution to perform it 
           needs to be also functional.</p>
-        <p>Pásztor, D. October 2019. How to Start Screen Design and 8 Principles You Should Consider. Uxstudio. <br>URL: <a href="https://uxstudioteam.com/ux-blog/screen-design/">https://uxstudioteam.com/ux-blog/screen-design/</a>.
-        Accessed: 10 March 2024.</p>
+        <p><i></i>Pásztor, D. October 2019. How to Start Screen Design and 8 Principles You Should Consider. Uxstudio. <br>URL: <a href="https://uxstudioteam.com/ux-blog/screen-design/">https://uxstudioteam.com/ux-blog/screen-design/</a>.
+        Accessed: 10 March 2024.</i></p>
         </br>
         <h1>5. Logic of your solution</h1>
         <p>Your digital service needs to have logic to it. For example, 3 three guiding questions of screen design: when we arrive at a new screen, we are looking 
@@ -101,32 +101,32 @@
           proximity that supports logic in solutions. With proximity Valtakari means that things that are connected to each other should physically locate in the 
           closeness of each other. This helps navigation and improves user-friendliness greatly. Logic of digital service can also include consistency and standards 
           to it mentioned earlier in principle list number 3.</p>
-         <p>Pásztor, D. October 2019. How to Start Screen Design and 8 Principles You Should Consider. Uxstudio. <br>URL: <a href="https://uxstudioteam.com/ux-blog/screen-design/">https://uxstudioteam.com/ux-blog/screen-design/</a>.
-          Accessed: 10 March 2024.</p>
-         <p>Valtakari, K. 2024. Design Principles with examples. Haaga-Helia. Helsinki. <br>URL: <a href="https://hhmoodle.haaga-helia.fi/pluginfile.php/3567698/mod_resource/content/6/DesignPrinciples_CRAP_examples.pdf">https://hhmoodle.haaga-helia.fi/pluginfile.php/3567698/mod_resource/content/6/DesignPrinciples_CRAP_examples.pdf</a>. 
-         Accessed: 13 March 2024.</p>
+         <p><i></i>Pásztor, D. October 2019. How to Start Screen Design and 8 Principles You Should Consider. Uxstudio. <br>URL: <a href="https://uxstudioteam.com/ux-blog/screen-design/">https://uxstudioteam.com/ux-blog/screen-design/</a>.
+          Accessed: 10 March 2024.</i></p>
+         <p><i></i>Valtakari, K. 2024. Design Principles with examples. Haaga-Helia. Helsinki. <br>URL: <a href="https://hhmoodle.haaga-helia.fi/pluginfile.php/3567698/mod_resource/content/6/DesignPrinciples_CRAP_examples.pdf">https://hhmoodle.haaga-helia.fi/pluginfile.php/3567698/mod_resource/content/6/DesignPrinciples_CRAP_examples.pdf</a>. 
+         Accessed: 13 March 2024.</i></p>
         </br>
         <h1>6. Help and Documentation </h1>
         <p>It’s best if the system doesn’t need any additional explanation. However, it may be necessary to provide documentation to help users understand how to 
           complete their tasks (Nielsen January 2024). System must be self-explanatory enough for user to navigate through it without further introduction. 
           If certain service requires eexplanation, you might want to reconsider weather it’s clear and functional enough or is there a room for betterment. 
           If there is not user help regarding usage of the service, when facing an error or hardship user can easily abandon service.</p>
-         <p>Nielsen, J. January 2024. 10 Usability Heuristics for User Interface Design. Nielsen Norman Group. <br>URL: <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">https://www.nngroup.com/articles/ten-usability-heuristics/</a>. 
-          Accessed: 10 March 2024. </p>
+         <p><i></i>Nielsen, J. January 2024. 10 Usability Heuristics for User Interface Design. Nielsen Norman Group. <br>URL: <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">https://www.nngroup.com/articles/ten-usability-heuristics/</a>. 
+          Accessed: 10 March 2024. </i></p>
         </br>
         <h1>7. Target audience reach</h1>
         <p>Does the service you have designed reach the desired target audience? Digital services might not translate universally to all user groups to it is crucial 
           it translates to your primary user group. Services for elderly people are designed differently compared to services designed for youth or even children. 
           The difference is big, and a mark can be missed if the design does not adhere to these specifications. </p>
-         <p>Simpson, M. November 2014. Principles of Graphic Design. Online video. UCLA Luskin School of Public Affairs. 
-          <br>URL: <a href="https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s">https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s</a>.Accessed: 12 March 2024.</p>
+         <p><i></i>Simpson, M. November 2014. Principles of Graphic Design. Online video. UCLA Luskin School of Public Affairs. 
+          <br>URL: <a href="https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s">https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s</a>.Accessed: 12 March 2024.</i></p>
         </br>
         <h1>8. Simplicity </h1>
         <p>Simplicity of design highlights the need to remove anything that is unnecessary in digital service design. Anything that might crowd the solution or 
           distract the user from their task within the app. These things can unnecessarily complicate the user experience within the solution. Only the necessary 
           features or design choices should be applied to final design product.</p>
-         <p>Simpson, M. November 2014. Principles of Graphic Design. Online video. UCLA Luskin School of Public Affairs. 
-          <br>URL: <a href="https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s">https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s</a>.Accessed: 12 March 2024.</p>
+         <p><i></i>Simpson, M. November 2014. Principles of Graphic Design. Online video. UCLA Luskin School of Public Affairs. 
+          <br>URL: <a href="https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s">https://www.youtube.com/watch?v=LKOq3Dhcqig&t=1s</a>.Accessed: 12 March 2024.</i></p>
         </br>
     </article>
   </section>
